welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:4: error: illegal start of statement (no modifiers allowed here)
	for(x<-1 to 6){override def run() {
                       ^