welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() { def faireMotif() {
	for(x<-1 to 6){override def run() {
 

	def faireV() {
		
			avance()
			baisseBrosse();
			leveBrosse();
			avance();
			gauche();
			avance();
			baisseBrosse();
			leveBrosse();
			recule();
			droite();
			avance();
			baisseBrosse();
			leveBrosse();
			avance();
			
			
			
	     	
	     	
	     	 
		
	}
	faireV();
	gauche();
     faireV();gauche();
     faireV();gauche();
     faireV();gauche();
     
}

		
	}
}
}
faireMotif();
